--- a/author/sample/json/anim_motionease.json
+++ b/author/sample/json/anim_motionease.json
@@ -67,7 +67,7 @@
         "canvaswidth": "400",
         "canvasheight": "400",
         "canvasdomname": "activity",
-        "canvasparent": "outputholder"
+        "canvasparent": "canvasholder"
     },
     "anims": [
         {
